Do not hide select2 search on mobile devices; fixes #3801

--- a/css/styles.css
+++ b/css/styles.css
@@ -4241,9 +4241,7 @@ input[type=checkbox].toggle_comments:checked ~ ul {
       display: block;
    }
 
-   .select2-focusser,
-   .select2-search,
-   .select2-search input {
+   .select2-focusser {
        display: none !important;
    }
 
